--- a/server-web/build.gradle
+++ b/server-web/build.gradle
@@ -6,6 +6,8 @@ dependencies {
 
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.28'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jdk-http', version: '2.28'
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.28'
+
     compile 'org.glassfish.jersey.core:jersey-common:2.28'
     compile 'org.glassfish.jersey.inject:jersey-hk2:2.28'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
