--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 *.ipr
 /.idea
 /classes
+/out
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -33,3 +34,4 @@ hs_err_pid*
 .gradle
 !gradle/wrapper/gradle-wrapper.jar
 /local.properties
+/build
